# bRAG-langchain

./: full_basic_rag.ipynb  pyproject.toml
notebooks/: [1]_rag_setup_overview.ipynb  [2]_rag_with_multi_query.ipynb  [3]_rag_routing_and_query_construction.ipynb  [4]_rag_indexing_and_advanced_retrieval.ipynb  [5]_rag_retrieval_and_reranking.ipynb
