[project]
name = "brag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "cohere>=5.13.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.36",
    "langchain-openai>=0.3.6",
    "langchainhub>=0.1.21",
    "numpy>=1.26.4",
    "pinecone-client>=5.0.1",
    "pypdf>=5.3.0",
    "python-dotenv>=1.0.1",
    "pytube>=15.0.0",
    "ragatouille>=0.0.9",
    "tiktoken>=0.9.0",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2025.1.26",
]
